<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="algonquin.cst2335_yikaiwang_finalproject.MainActivity" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/teal_200"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/projectTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewMenuInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/project_menu_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

    <Button
        android:id="@+id/btnNasaPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/menu_nasa_photo"
        app:layout_constraintEnd_toEndOf="@+id/textViewMenuInfo"
        app:layout_constraintStart_toStartOf="@+id/textViewMenuInfo"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenuInfo" />

    <Button
        android:id="@+id/btnPlaceKitten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/menu_place_kitten"
        app:layout_constraintEnd_toEndOf="@+id/btnNasaPhoto"
        app:layout_constraintStart_toStartOf="@+id/btnNasaPhoto"
        app:layout_constraintTop_toBottomOf="@+id/btnNasaPhoto" />

    <Button
        android:id="@+id/btnNYTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/menu_ny_times"
        app:layout_constraintEnd_toEndOf="@+id/btnPlaceKitten"
        app:layout_constraintStart_toStartOf="@+id/btnPlaceKitten"
        app:layout_constraintTop_toBottomOf="@+id/btnPlaceKitten" />

    <Button
        android:id="@+id/btnWeatherStack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/menu_weather_stack"
        app:layout_constraintEnd_toEndOf="@+id/btnNYTimes"
        app:layout_constraintStart_toStartOf="@+id/btnNYTimes"
        app:layout_constraintTop_toBottomOf="@+id/btnNYTimes" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>